# spotify-ytmusic-sync

./: .gitignore  db.py  logger.py  main.py  models.py  pyproject.toml  services.py  utils.py
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/SpotifySong/: index.tsx
