[tool.poetry]
name = "spotify-yt-sync"
version = "0.1.0"
description = "sync liked songs and artists to get similar (lit) recommendations"
authors = ["Akash NP <akashnp1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
