[tool.poetry]
name = "spotify-yt-sync"
version = "0.1.0"
description = "sync liked songs and artists to get similar (lit) recommendations"
authors = ["Akash NP <akashnp1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.7.0"
python-decouple = "^3.8"
ytmusicapi = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
